# mlda_dataset_original

./: .gitignore  CMakeLists.txt  README.md  package.xml
bottle/0/word/: teacher001.txt  teacher002.txt
bottle/1/word/: teacher002.txt
bottle/2/word/: teacher000.txt
cup/0/word/: teacher000.txt  teacher002.txt
cup/1/word/: teacher000.txt  teacher001.txt  teacher002.txt
cup/2/word/: teacher001.txt  teacher002.txt
doll/0/word/: teacher000.txt
doll/2/word/: teacher000.txt
original/bottle/0/word/: teacher000.txt
original/bottle/1/word/: teacher000.txt  teacher001.txt
original/bottle/2/word/: teacher001.txt  teacher002.txt
original/cup/0/word/: teacher001.txt
original/cup/2/word/: teacher000.txt
original/doll/0/word/: teacher001.txt  teacher002.txt
original/doll/1/word/: teacher000.txt  teacher001.txt  teacher002.txt
original/doll/2/word/: teacher001.txt  teacher002.txt
rsj/word/: teaching_text.txt
rsj_exp/bottle/coffee/word/: teaching_text.txt
rsj_exp/bottle/fruits/word/: teaching_text.txt
rsj_exp/bottle/muscat/word/: teaching_text.txt
rsj_exp/cup/blue/word/: teaching_text.txt
rsj_exp/cup/green/word/: teaching_text.txt
rsj_exp/cup/orange/word/: teaching_text.txt
rsj_exp/doll/penguin/word/: teaching_text.txt
rsj_exp/doll/pig/word/: teaching_text.txt
rsj_exp/doll/sheep/word/: teaching_text.txt
