<?xml version="1.0"?>
<package format="2">
  <name>mlda_dataset_original</name>
  <version>1.0.0</version>
  <description>The mlda_dataset_original package</description>
  <maintainer email="hasegawa.shoichi@em.ci.ritsumei.ac.jp">root</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>

